--- a/index.html
+++ b/index.html
@@ -682,12 +682,6 @@ https://www.facebook.com/profile.php?id=100075473425112
 		    <h5 class="text-dark"> Info Act Bangladesh </h5>
 				      </a>		
 
-<div class="line line-lg w-3x b-b b-danger m-auto"></div>
-
-<a href="https://www.facebook.com/profile.php?id=100075473425112" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="https://www.facebook.com/share/p/15EpiQ5xBt/?mibextid=qi2Omg" alt="" class="img-full wrapper-xs bg-white>
-			                                                        
-				      </a>
-
 </p>
 				         </div>
 				    </div>
@@ -714,6 +708,14 @@ https://www.facebook.com/profile.php?id=100075473425112
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
 <img src="imgs/fragrance spray.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://www.facebook.com/profile.php?id=100075473425112" class="thumb-lg m-t-n-lg m-r-n-lg">
+<img src="https://www.facebook.com/share/p/15EpiQ5xBt/?mibextid=qi2Omg" alt="" class="img-full wrapper-xs bg-white img-fluid">	                                                 
+				      </a>
+
 
 </div>
 		 </div>
