--- a/index.html
+++ b/index.html
@@ -712,6 +712,8 @@ https://www.facebook.com/profile.php?id=100075473425112
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
+<img src="https://www.websschool.com/images/image_example.jpg" alt="websSchools.com"  class="img-full wrapper-xs bg-white img-fluid">	
+
 <a href="https://www.facebook.com/profile.php?id=100075473425112" class="thumb-lg m-t-n-lg m-r-n-lg">
 <img src="https://www.facebook.com/share/p/15EpiQ5xBt/?mibextid=qi2Omg" alt="" class="img-full wrapper-xs bg-white img-fluid">	                                                 
 				      </a>
