--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ https://www.facebook.com/profile.php?id=100075473425112
 <a href="https://www.facebook.com/profile.php?id=100075473425112" class=""><img src="imgs/samina_mart.png" alt="" class="img-thumbnail wrapper-xs img-fluid">	</a>
 <br>
     <a href="hajjapp.html" class="btn btn-primary"> E- Hajj Info </a>
-<a href="seventys.html" class="btn btn-info"> Best of 70es </a>
-<a href="eightys.html" class="btn btn-danger"> Best of 80es </a>
+<a href="healthcontent.html" class="btn btn-info"> Health information</a>
+<a href="babies.html" class="btn btn-danger"> Babies health </a>
 </span>
                      
 		        <h6 class="text-info">🎓 আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬।<br> 
