--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 <a href="https://www.facebook.com/profile.php?id=100075473425112" class=""><img src="imgs/samina_mart.png" alt="" class="img-thumbnail wrapper-xs img-fluid">	</a>
 <br>
     <a href="hajjapp.html" class="btn btn-primary"> E- Hajj Info </a>
-<a href="healthcontent.html" class="btn btn-info"> Health information</a>
+<a href="healthcontent.html" class="btn btn-info"> Health info</a>
 <a href="babies.html" class="btn btn-danger"> Babies health </a>
 </span>
                      
