--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 <br>
     <a href="hajjapp.html" class="btn btn-primary"> E- Hajj Info </a>
 <a href="healthcontent.html" class="btn btn-info"> Health info</a>
-<a href="babies.html" class="btn btn-danger"> Babies health </a>
+<a href="babies.html" class="btn btn-success"> Babies health </a>
 </span>
                      
 		        <h6 class="text-info">🎓 আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬।<br> 
