--- a/babies.html
+++ b/babies.html
@@ -10,8 +10,8 @@ https://www.facebook.com/profile.php?id=100075473425112
 <html class="no-js">
 	<head>
 		<meta charset="utf-8">
-		<title>Health Journal</title>
-		<meta name="description" content="health journal Musammat Samina">
+		<title>Babies Health Journal</title>
+		<meta name="description" content="Babies Health journal Musammat Samina">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no" />
 		<link rel="shortcut icon" href="/favicon.ico">
 
@@ -38,29 +38,7 @@ https://www.facebook.com/profile.php?id=100075473425112
     <div class="item"><img src="imgs/hc5.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc6.jpg" alt=""></div>
     <div class="item"><img src="imgs/hc7.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc8.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc9.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc10.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc11.jpg" alt=""></div>
-   <div class="item"><img src="imgs/hc12.jpg" alt="Jahangir Gate"></div>
-    <div class="item"><img src="imgs/hc13.jpg" alt="Bangladesh Army Stadium"></div>
-    <div class="item"><img src="imgs/hc14.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc15.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc16.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc17.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc18.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc19.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc20.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc21.jpg" alt=""></div>
-<div class="item"><img src="imgs/hc22.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc23.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc24.jpg" alt=""></div>
-<div class="item"><img src="imgs/hc25.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc26.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc27.jpg" alt=""></div>
-<div class="item"><img src="imgs/hc28.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc29.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc30.jpg" alt=""></div>
+    
 </div>
 <div class="slider_nav">
 	<button class="am-next">Next</button>
