--- a/babies.html
+++ b/babies.html
@@ -30,20 +30,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 <section>
 <div class="container">
    <div class="row">
-<div class="owl-carousel owl-theme">
-    <div class="item"><img src="imgs/hc1.jpg" alt="Jahangir Gate"></div>
-    <div class="item"><img src="imgs/hc2.jpg" alt="Bangladesh Army Stadium"></div>
-    <div class="item"><img src="imgs/hc3.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc4.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc5.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc6.jpg" alt=""></div>
-    <div class="item"><img src="imgs/hc7.jpg" alt=""></div>
-    
-</div>
-<div class="slider_nav">
-	<button class="am-next">Next</button>
-	<button class="am-prev">Previous</button>
-</div>
+<img src="imgs/hc1.jpg" alt="babies">
 
 </div>
 </div>
