--- a/index.html
+++ b/index.html
@@ -331,6 +331,13 @@ https://www.facebook.com/profile.php?id=100075473425112
 			                                                         
 		        <h5 class="text-dark"> Bangladesh Times </h5>
 				      </a>			
+<div class="line line-lg w-3x b-b m-auto"></div>
+
+<a href="https://usharalo.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/UsharAlo-logo.png" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h5 class="text-dark"> Usharalo </h5>
+				      </a>			
+
 </p>
      </div>
     </div>
