--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 
 <div class="row">
 <div class="col-sm-12 text-center">
-		      	<img src="imgs/sheikh_hasina.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
+		      	<img src="imgs/conference.jpg" alt="" class="img-full wrapper-xs bg-white img-fluid">	
 	   
 <div class="line line-lg w-3x b-b m-auto"></div>
 </div>	
