--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!---Author: Musammat Samina
+ <!---Author: Musammat Samina
 Designation: Software Engineer
 Email : musammatsamina@gmail.com
 Mobile: 01722393251 / 01516776953
@@ -337,6 +337,13 @@ https://www.facebook.com/profile.php?id=100075473425112
 			                                                         
 		        <h5 class="text-dark"> Usharalo </h5>
 				      </a>			
+
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://epaper.bonikbarta.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/ebonik.png" alt="" class="img-full wrapper-xs bg-white">
+			                                                        
+	<h5 class="text-dark">bonik barta</h5>
+				     			        </a> 
 
 </p>
      </div>
