--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 				      </a>					
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-<a href="https://www.bhorerkagoj.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bhorer-kagoj.webp" alt="" class="img-full wrapper-xs bg-white">
+<a href="https://epaper.bhorerkagoj.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/bhorer-kagoj.webp" alt="" class="img-full wrapper-xs bg-white">
 			                                                        
 	<h5 class="text-dark">bhorer kagoj</h5>
 				     			        </a> 
