--- a/hajjapp.html
+++ b/hajjapp.html
@@ -57,6 +57,9 @@
   </div>
 </div>
 </div>
+<div class="col-sm-6">
+<a href="https://hajj.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"><img src="imgs/google-pay-pilgrim-guide.png" alt="" class="img-full wrapper-xs bg-white></a>
+</div>
 </div>
 </div>
 
