--- a/hajjapp.html
+++ b/hajjapp.html
@@ -44,7 +44,7 @@
 <section class="p-v-xl bg-light">
 <div class="container">
    <div class="row">
-<div class="col-sm-8">
+<div class="col-sm-6 p-v m-v-xl">
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">হজ্জ্ব ব্যবস্থাপনায় মোবাইল অ্যাপ 📋</h5>
@@ -57,7 +57,7 @@
   </div>
 </div>
 </div>
-<div class="col-sm-4">
+<div class="col-sm-6 p-v m-v-xl">
 <a href="https://hajj.gov.bd" class="thumb-lg m-t-n-lg m-r-n-lg"><img src="imgs/hajj samina_1735444194659.jpg" alt="" class="img-full wrapper-xs bg-white></a>
 </div>
 </div>
