--- a/index.html
+++ b/index.html
@@ -869,6 +869,12 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 			                                              <h5 class="text-dark">PGCB </h5>
 				      
  </a> 
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://www.facebook.com/profile.php?id=100075473425112" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="img/samina-mart.jpg" alt="" class="img-full wrapper-xs bg-white">
+			                                                        
+	<h5 class="text-dark">samina mart</h5>
+				     			        </a> 
        </div>
 				    </div>
 			  </div>
