--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 </div><!----<br>
 <span>visit count:</span><span class="website-counter"></span>
   <button id="reset">Reset</button>	<br>---->
-      	<img src="imgs/musammat_samina_qr.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
+      	<img src="imgs/village view.jpg" alt="" class="img-thumbnail wrapper-xs bg-white img-fluid">	
 </div>	
 
  <div class="col-sm-6 text-center">
