--- a/babies.html
+++ b/babies.html
@@ -30,7 +30,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 <section>
 <div class="container">
    <div class="row">
-<img src="imgs/hi_20240726.jpg" alt="babies">
+<img src="imgs/hi_20240726.jpg" class="img-fluid" alt="babies">
 
 </div>
 </div>
