--- a/babies.html
+++ b/babies.html
@@ -30,8 +30,9 @@ https://www.facebook.com/profile.php?id=100075473425112
 <section>
 <div class="container">
    <div class="row">
-<img src="imgs/hi_20240726.jpg" class="img-fluid" alt="babies">
-
+    <div class="col-sm">
+      <img src="imgs/hi_20240726.jpg" class="img-fluid" alt="babies">
+    </div>
 </div>
 </div>
 </section>
