--- a/index.html
+++ b/index.html
@@ -226,7 +226,14 @@ https://www.facebook.com/profile.php?id=100075473425112
 <a href="http://techvision24.com/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/tackvision-Bangla.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		        <h5 class="text-dark">Techvision24.com</h5>
-				      </a>				       		       
+				      </a>	
+<div class="line line-lg w-3x b-b m-auto"></div> 
+
+			       		 <a href="https://www.computerjagat.com.bd/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/computerjagat.jpeg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h5 class="text-dark"> Computer Jagat </h5>
+				      </a>
+				      </a>      
 </p>
      </div>
     </div>
