--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 		        <span class="m-b-xl text-center p-v m-v-xl"> 
     <a href="ninetys.html" class="btn btn-warning"> Entrepreneur </a>
 <a href="older.html" class="btn btn-danger"> Best of older  </a>
-<a href="newborn.html" class="btn btn-success"> Best of newborn </a>
+<a href="alphabet.html" class="btn btn-success"> Kids Alphabet </a>
 </span>
 </div>
 </div>
