--- a/index.html
+++ b/index.html
@@ -710,6 +710,14 @@ https://www.facebook.com/profile.php?id=100075473425112
 		    <h5 class="text-dark"> Info Act Bangladesh </h5>
 				      </a>		
 
+
+<div class="line line-lg w-3x b-b m-auto"></div>
+
+<a href="http://180.211.162.102:8444/result_arch/index.php" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/Bangladesh_Technical_Education_Board_Emblem.svg" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h5 class="text-dark"> Education Result </h5>
+				      </a>		
+
 </p>
 				         </div>
 				    </div>
