--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 
 <div class="line line-lg w-3x b-b m-auto"></div>
 
-<a href="http://180.211.162.102:8444/result_arch/index.php" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/Bangladesh_Technical_Education_Board_Emblem.svg" alt="" class="img-full wrapper-xs bg-white>
+<a href="http://180.211.162.102:8444/result_arch/index.php" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/Bangladesh_Technical_Education_Board_Emblem.svg.png" alt="" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h5 class="text-dark"> Education Result </h5>
 				      </a>		
