--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@ https://www.facebook.com/profile.php?id=100075473425112
 			                                                         
 		        <h5 class="text-dark"> বণিক বার্তা</h5>
 				      </a>
+
+<div class="line line-lg w-3x b-b m-auto"></div>
+
+  <a href="https://digibanglatech.news/" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/digibanglatech.png" alt="" class="img-full wrapper-xs bg-white>
+			                                                         
+		        <h5 class="text-dark"> Digibangla twch</h5>
+				      </a>
+
 </p>
       </div>
     </div>
