--- a/index.html
+++ b/index.html
@@ -530,6 +530,13 @@ https://www.facebook.com/profile.php?id=100075473425112
 		    <h5 class="text-dark"> Railway e-ticket System</h5>
 				      </a>		
 
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+
+<a href="https://xiclassadmission.gov.bd/" class="thumb-lg m-t-n-lg m-r-n-lg" alt="class admission education"> <img src="imgs/xiclassadmission.jpg" alt="class admission education" class="img-full wrapper-xs bg-white>
+			                                                         
+		    <h5 class="text-dark"> Admission CLS-11 </h5>
+				      </a>		
+
      </p>
 				       </div>
 				    </div>
