--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://xiclassadmission.gov.bd/" class="thumb-lg m-t-n-lg m-r-n-lg" alt="class admission education"> <img src="imgs/xiclassadmission.jpg" alt="class admission education" class="img-full wrapper-xs bg-white>
+<a href="https://xiclassadmission.gov.bd/" class="thumb-lg m-t-n-lg m-r-n-lg" alt="class admission education"> <img src="imgs/xiclassadmission.png" alt="class admission education" class="img-full wrapper-xs bg-white>
 			                                                         
 		    <h5 class="text-dark"> Admission CLS-11 </h5>
 				      </a>		
