--- a/index.html
+++ b/index.html
@@ -831,7 +831,11 @@ ACI Seed Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
  </a> 
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-<a href="https://wa.me/8801721981804" class="thumb-lg m-t-n-lg m-r-n-lg"> <img src="imgs/abfashionhouse.jpg" alt="" class="img-full wrapper-xs bg-white">
+<a href="https://www.facebook.com/ABFasionHouseBD?mibextid=ZbWKwL" class="thumb-lg m-t-n-lg m-r-n-lg">
+
+<!--- <a href="https://wa.me/8801721981804" class="thumb-lg m-t-n-lg m-r-n-lg"> ----->
+
+<img src="imgs/abfashionhouse.jpg" alt="" class="img-full wrapper-xs bg-white">
 			                                                        
 	<h5 class="text-dark"> AB Fashion House</h5>
 				     			        </a> 
