--- a/index.html
+++ b/index.html
@@ -954,6 +954,12 @@ Bagan Rajsahi Agro <i class="fa fa-whatsapp" aria-hidden="true"></i> </a>
 			                                                        
 	<h5 class="text-dark"> Bhagyakul Mistanna Bhander</h5>
 				     			        </a>  
+
+<div class="line line-lg w-3x b-b b-danger m-auto"></div>
+<a href="https://gd.police.gov.bd/" class="thumb-lg m-t-n-lg m-r-n-lg" alt=" online gd police government " > <img src="imgs/onlinegd.png" alt=" online gd police government " class="img-full wrapper-xs bg-white">
+			                                                        
+	<h5 class="text-dark"> Online GD </h5>
+				     			        </a>  
 	         </div>
 				    </div>
 			  </div>
