--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@ https://www.facebook.com/profile.php?id=100075473425112
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
 <a href="https://www.facebook.com/profile.php?id=100075473425112">
-<img src="imgs/samina_202407262" alt="Samina Mart"  class="img-full wrapper-xs bg-white img-fluid">	                                                
+<img src="imgs/samina_202407262.jpg" alt="Samina Mart"  class="img-full wrapper-xs bg-white img-fluid">	                                                
 				      </a>
 
 
