--- a/api.html
+++ b/api.html
@@ -20,7 +20,7 @@
 
       const formData = new FormData(event.target);
 
-     fetch("https://example.com/api/endpoint", {
+     fetch("https://graph.facebook.com/107180495102412/ratings", {
          method: "POST",
          body: formData,
       })
