--- a/api.html
+++ b/api.html
@@ -21,12 +21,21 @@
     <h1>Hello, world!</h1>
 
 <form id="api-form">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name"><br><br>
-     <label for="email">Email:</label>
-     <input type="email" id="email" name="email"><br><br>
-     <button type="submit">Submit</button>
-   </form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
  
    <script>
     const form = document.getElementById("api-form");
