--- a/api.html
+++ b/api.html
@@ -18,6 +18,7 @@
     <![endif]-->
   </head>
   <body>
+<div class="container-md">
     <img src="imgs/samina-mart.jpg" class="img-thumbnail" alt=" samina samina-mart">
 
 <form id="api-form">
@@ -36,7 +37,7 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
- 
+ </div>
    <script>
     const form = document.getElementById("api-form");
 
