--- a/api.html
+++ b/api.html
@@ -1,3 +1,14 @@
+<!---Author: Musammat Samina
+Designation: Software Engineer
+Email : musammatsamina@gmail.com
+Mobile: 01722393251 / 01516776953
+Address: C/O Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh.
+Profile: https://facebook.com/musammat.samina
+website:https://musammatsamina.github.io |
+https://livelearnislam773354777.wordpress.com/
+https://www.facebook.com/profile.php?id=100075473425112
+---->
+
 <!doctype html>
 <html lang="en">
   <head>
