--- a/api.html
+++ b/api.html
@@ -29,7 +29,7 @@ https://www.facebook.com/profile.php?id=100075473425112
     <![endif]-->
   </head>
   <body>
-<div class="container-md">
+<div class="container-fluid">
     <img src="imgs/samina-mart.jpg" class="img-thumbnail" alt=" samina samina-mart">
 
 <form id="api-form">
