--- a/api.html
+++ b/api.html
@@ -30,7 +30,7 @@ https://www.facebook.com/profile.php?id=100075473425112
   </head>
   <body>
 <div class="container-fluid">
-    <img src="imgs/samina-mart.jpg" class="img-thumbnail" alt=" samina samina-mart">
+    <img src="imgs/samina-app.jpg" class="img-thumbnail" alt=" samina samina-mart">
 
 <form id="api-form">
   <div class="mb-3">
