--- a/api.html
+++ b/api.html
@@ -38,7 +38,7 @@ https://www.facebook.com/profile.php?id=100075473425112
     <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
     <div id="emailHelp" class="form-text">Search your information </div>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Search</button>
 </form>
  </div>
    <script>
