--- a/api.html
+++ b/api.html
@@ -35,8 +35,8 @@ https://www.facebook.com/profile.php?id=100075473425112
 <form id="api-form">
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Health Info</label>
-    <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example">
-    <div id="emailHelp" class="form-text">Search your information </div>
+    <input class="form-control form-control-lg" type="text" placeholder="Search your health information" aria-label=".form-control-lg example">
+    <div id="emailHelp" class="form-text">Search your health information </div>
   </div>
   <button type="submit" class="btn btn-primary">Search</button>
 </form>
