--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Address: C/O Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Ro
 Profile: https://facebook.com/musammat.samina
 website:https://musammatsamina.github.io |
 https://livelearnislam773354777.wordpress.com/
-https://www.facebook.com/profile.php?id=100075473425112
+https://www.facebook.com/share/1ESoZ1BeHF/
 ---->
 <!DOCTYPE html>
 <html class="no-js">
@@ -55,7 +55,7 @@ https://www.facebook.com/profile.php?id=100075473425112
                               
 	 <span class="m-b-xl text-center p-v m-v-xl">
  
-<a href="https://www.facebook.com/profile.php?id=100075473425112" class=""><img src="imgs/samina_mart.png" alt="" class="img-thumbnail wrapper-xs img-fluid">	</a>
+<a href="https://www.facebook.com/share/1ESoZ1BeHF/" class=""><img src="imgs/samina_mart.png" alt="Samina Mart content programming development " class="img-thumbnail wrapper-xs img-fluid">	</a>
 <br>
     <a href="hajjapp.html" class="btn btn-primary"> E- Hajj Info </a>
 <a href="healthcontent.html" class="btn btn-info"> Health info</a>
@@ -763,8 +763,8 @@ https://www.facebook.com/profile.php?id=100075473425112
 
 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 
-<a href="https://www.facebook.com/profile.php?id=100075473425112">
-<img src="imgs/samina_202407262.jpg" alt="Samina Mart"  class="img-full wrapper-xs bg-white img-fluid">	                                                
+<a href="https://www.facebook.com/share/1ESoZ1BeHF/">
+<img src="imgs/samina_202407262.jpg" alt="Samina Mart content development programming "  class="img-full wrapper-xs bg-white img-fluid">	                                                
 				      </a>
 
 
