--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ https://www.facebook.com/share/1ESoZ1BeHF/
 		        <span class="m-b-xl text-center p-v m-v-xl"> 
     <a href="ninetys.html" class="btn btn-warning"> Entrepreneur </a>
 <a href="older.html" class="btn btn-danger"> Best of older  </a>
-<a href="alphabet.html" class="btn btn-success"> Kids Alphabet </a>
+<a href="alphabet.html" class="btn btn-success"> Kids </a>
+<a href="api.html" alt="samina sabina saminamart" class="btn btn-info"> Api </a>
 </span>
 </div>
 </div>
