--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ Mobile: 01722393251 / 01516776953
 Address: C/O Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh.
 Profile: https://facebook.com/musammat.samina
 website:https://musammatsamina.github.io |
-https://livelearnislam773354777.wordpress.com/
+https://seagirlsabo.wordpress.com/
+https://www.linkedin.com/company/samina-mart/
 https://www.facebook.com/share/1ESoZ1BeHF/
 ---->
 <!DOCTYPE html>
@@ -55,7 +56,7 @@ https://www.facebook.com/share/1ESoZ1BeHF/
                               
 	 <span class="m-b-xl text-center p-v m-v-xl">
  
-<a href="https://www.facebook.com/share/1ESoZ1BeHF/" class=""><img src="imgs/samina_mart.png" alt="Samina Mart content programming development " class="img-thumbnail wrapper-xs img-fluid">	</a>
+<a href="https://www.linkedin.com/company/samina-mart/" class=""><img src="imgs/samina_mart.png" alt="Samina Mart content programming development " class="img-thumbnail wrapper-xs img-fluid">	</a>
 <br>
     <a href="hajjapp.html" class="btn btn-primary"> E- Hajj Info </a>
 <a href="healthcontent.html" class="btn btn-info"> Health info</a>
