--- a/navigation.html
+++ b/navigation.html
@@ -55,8 +55,8 @@ Profile: https://facebook.com/musammat.samina
                                                 <div class="text-lg m-t">
 							<a class="m-r-sm" href="https://twitter.com/seagirlsabo"><i class="fa fa-twitter"></i></a>
 							<a class="m-r-sm" href="https://facebook.com/musammat.samina"><i class="fa fa-facebook"></i></a>
-							<a class="m-r-sm" href="http://about.me/imsamina"><i class="fa fa-codepen"></i></a>
-							<a class="m-r-sm" href="https://livelearnislam773354777.wordpress.com"><i class="fa fa-wordpress"></i></a>
+							<a class="m-r-sm" href="https://www.linkedin.com/company/samina-mart/"><i class="fa fa-codepen"></i></a>
+							<a class="m-r-sm" href="https://seagirlsabo.wordpress.com"><i class="fa fa-wordpress"></i></a>
 							<a class="m-r-sm" href="https://www.scribd.com/user/550088416/Musammat-Samina"><i class="fa-brands fa-scribed"></i></a>
 							
                                                         <a class="m-r-sm" href=""><i class="fa-sharp fa-solid fa-pen-nib"></i></a>
