--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ Profile: https://facebook.com/musammat.samina
 website:https://musammatsamina.github.io |
 https://seagirlsabo.wordpress.com/
 https://www.linkedin.com/company/samina-mart/
-https://www.facebook.com/share/1ESoZ1BeHF/
+https://whatsapp.com/channel/0029VajfyvzKQuJLmNaard2V
+
 ---->
 <!DOCTYPE html>
 <html class="no-js">
@@ -67,7 +68,7 @@ https://www.facebook.com/share/1ESoZ1BeHF/
  <span class="text-primary">( Al-hajj Md. Abdul Khalek, Mst. Sufia Begum, House 35(1st floor), Road 03, Block C, Section 12, Mirpur, Pallabi, Dhaka 1216, Bangladesh. ) <br>
 <a href ="mailto:musammatsamina@gmail.com">musammatsamina@gmail.com <i class="fa fa-envelope" aria-hidden="true"></i> </a>
 
-<a href="https://wa.me/8801722393251" class="thumb-lg m-t-n-lg m-r-n-lg"> <i class="fa fa-whatsapp" aria-hidden="true"></i> 
+<a href="https://whatsapp.com/channel/0029VajfyvzKQuJLmNaard2V" class="thumb-lg m-t-n-lg m-r-n-lg"> <i class="fa fa-whatsapp" aria-hidden="true"></i> 
 			                                                        
 				     			        </a> 
 </span>
