--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ https://whatsapp.com/channel/0029VajfyvzKQuJLmNaard2V
 <html class="no-js">
 	<head>
 		<meta charset="utf-8">
+<meta name="google-adsense-account" content="ca-pub-6020565884936754">
 		<title>Samina's Journal</title>
 		<meta name="description" content="Musammat Samina, women entrepreneur's networking platform">
 <meta name="viewport" content="width=device-width">
